--- a/index.html
+++ b/index.html
@@ -65,6 +65,55 @@
             </a>
           </li>
         </ul>
+        <button type="button" class="menu-btn button">
+          <svg class="menu-btn__icon" width="40px" height="40px">
+            <use
+              href="./images/icons.svg/symbol-defs.svg#icon-menu_button"
+            ></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mob-menu">
+        <div class="mob-container">
+          <button type="button" class="mob-menu__button-close button">
+            <svg class="mob-menu__icon-close" width="40px" height="40px">
+              <use
+                href="./images/icons.svg/symbol-defs.svg#icon-close-mob-menu"
+              ></use>
+            </svg>
+          </button>
+          <ul class="mob-menu-list list">
+            <li class="mob-menu-list__item">
+              <a href="./index.html" class="mob-menu-list__link link active"
+                >Студия</a
+              >
+            </li>
+            <li class="mob-menu-list__item">
+              <a href="./portfolio.html" class="mob-menu-list__link link"
+                >Портфолио</a
+              >
+            </li>
+            <li class="mob-menu-list__item">
+              <a href="" class="mob-menu-list__link link">Контакты</a>
+            </li>
+          </ul>
+          <ul class="mob-menu-contact list">
+            <li class="mob-menu-contact__item">
+              <a
+                href="tel:+380961111111"
+                class="mob-menu-contact__link-tel link"
+                >+38 096 111 11 11
+              </a>
+            </li>
+            <li class="mob-menu-contact__item">
+              <a
+                href="mailto:info@devstudio.com"
+                class="mob-menu-contact__link link"
+                >info@devstudio.com
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
