--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,75 @@
             </a>
           </li>
         </ul>
+        <button type="button" class="menu-btn button">
+          <svg class="menu-btn__icon" width="40px" height="40px">
+            <use
+              href="./images/icons.svg/symbol-defs.svg#icon-menu_button"
+            ></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mob-menu is-hidden">
+        <div class="container">
+          <div class="mob-menu-top">
+            <button type="button" class="mob-menu__button-close button">
+              <svg class="mob-menu__icon-close" width="40px" height="40px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-close-mob-menu"
+                ></use>
+              </svg>
+            </button>
+            <ul class="mob-menu-list list">
+              <li class="mob-menu-list__item">
+                <a href="./index.html" class="mob-menu-list__link link"
+                  >Студия</a
+                >
+              </li>
+              <li class="mob-menu-list__item">
+                <a
+                  href="./portfolio.html"
+                  class="mob-menu-list__link link active"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="mob-menu-list__item">
+                <a href="" class="mob-menu-list__link link">Контакты</a>
+              </li>
+            </ul>
+          </div>
+          <div class="mob-menu-bottom">
+            <ul class="mob-menu-contact list">
+              <li class="mob-menu-contact__item">
+                <a
+                  href="tel:+380961111111"
+                  class="mob-menu-contact__link-tel link"
+                  >+38 096 111 11 11
+                </a>
+              </li>
+              <li class="mob-menu-contact__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="mob-menu-contact__link link"
+                  >info@devstudio.com
+                </a>
+              </li>
+            </ul>
+            <ul class="mob-menu-soc list">
+              <li class="mob-menu-soc__item">
+                <a href="" class="mob-menu-soc__link link">Instagram</a>
+              </li>
+              <li class="mob-menu-soc__item">
+                <a href="" class="mob-menu-soc__link link">Twitter</a>
+              </li>
+              <li class="mob-menu-soc__item">
+                <a href="" class="mob-menu-soc__link link">Facebook</a>
+              </li>
+              <li class="mob-menu-soc__item">
+                <a href="" class="mob-menu-soc__link link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -371,5 +440,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
