--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </header>
     <main>
       <!-- section 1 -->
-      <section class="hero section">
+      <!-- <section class="hero section">
         <div class="container">
           <div class="hero__content">
             <h1 class="hero__title">
@@ -148,9 +148,9 @@
             </button>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- section 2 -->
-      <section class="about section">
+      <!-- <section class="about section">
         <div class="container">
           <ul class="about-list list">
             <li class="about-list__item">
@@ -211,7 +211,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- section 3 -->
       <!-- <section class="work section">
         <div class="container">
@@ -248,7 +248,7 @@
         </div>
       </section> -->
       <!-- section 4 -->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <div class="team-content">
             <h2 class="team__title">Наша команда</h2>
@@ -452,9 +452,9 @@
             </ul>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- -----Section 5----- -->
-      <!-- <section class="clients section">
+      <section class="clients section">
         <div class="container">
           <h2 class="clients__title">Постоянные клиенты</h2>
           <ul class="clients-list list">
@@ -514,86 +514,88 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-content">
-          <div class="contacts-block">
-            <a href="./index.html" class="logo-link link">
-              <div class="logo-link__text">
-                Web<span class="logo-link__studio">Studio</span>
-              </div>
-            </a>
-            <address class="address">
-              <ul class="address-list list">
-                <li class="address-list__item">
-                  <a
-                    class="address-list__link link"
-                    href="https://goo.gl/maps/1SCj835wtnktaxQW8"
-                    target="_blank"
-                    rel="noopener noreferrer "
-                  >
-                    г. Киев, пр-т Леси Украинки, 26</a
-                  >
+          <div class="footer-wrap">
+            <div class="contacts-block">
+              <a href="./index.html" class="logo-link link">
+                <div class="logo-link__text">
+                  Web<span class="logo-link__studio">Studio</span>
+                </div>
+              </a>
+              <address class="address">
+                <ul class="address-list list">
+                  <li class="address-list__item">
+                    <a
+                      class="address-list__link link"
+                      href="https://goo.gl/maps/1SCj835wtnktaxQW8"
+                      target="_blank"
+                      rel="noopener noreferrer "
+                    >
+                      г. Киев, пр-т Леси Украинки, 26</a
+                    >
+                  </li>
+                  <li class="address-list__item">
+                    <a
+                      class="address-list__contacts link"
+                      href="mailto:info@example.com"
+                      >info@example.com</a
+                    >
+                  </li>
+                  <li class="address-list__item">
+                    <a
+                      class="address-list__contacts link"
+                      href="tel:+380991111111"
+                      >+38 099 111 11 11</a
+                    >
+                  </li>
+                </ul>
+              </address>
+            </div>
+            <div class="soc-icons">
+              <h3 class="soc-icons__title">Присоединяйтесь</h3>
+              <ul class="icons-list list">
+                <li class="icons-list__item">
+                  <a href="" class="icons-list__link link">
+                    <svg class="icons-list__svg" width="20px" height="20px">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-instagram-2"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="address-list__item">
-                  <a
-                    class="address-list__contacts link"
-                    href="mailto:info@example.com"
-                    >info@example.com</a
-                  >
+                <li class="icons-list__item">
+                  <a href="" class="icons-list__link link">
+                    <svg class="icons-list__svg" width="20px" height="20px">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-twitter-1"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="address-list__item">
-                  <a
-                    class="address-list__contacts link"
-                    href="tel:+380991111111"
-                    >+38 099 111 11 11</a
-                  >
+                <li class="icons-list__item">
+                  <a href="" class="icons-list__link link">
+                    <svg class="icons-list__svg" width="20px" height="20px">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-facebook-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icons-list__item">
+                  <a href="" class="icons-list__link link">
+                    <svg class="icons-list__svg" width="20px" height="20px">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
-            </address>
-          </div>
-          <div class="soc-icons">
-            <h3 class="soc-icons__title">Присоединяйтесь</h3>
-            <ul class="icons-list list">
-              <li class="icons-list__item">
-                <a href="" class="icons-list__link link">
-                  <svg class="icons-list__svg" width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg/symbol-defs.svg#icon-instagram-2"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-list__item">
-                <a href="" class="icons-list__link link">
-                  <svg class="icons-list__svg" width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg/symbol-defs.svg#icon-twitter-1"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-list__item">
-                <a href="" class="icons-list__link link">
-                  <svg class="icons-list__svg" width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg/symbol-defs.svg#icon-facebook-1"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-list__item">
-                <a href="" class="icons-list__link link">
-                  <svg class="icons-list__svg" width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg/symbol-defs.svg#icon-linkedin-1"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            </div>
           </div>
           <div class="subscribe subscribe_margin">
             <h3 class="subscribe__title">Подпишитесь на рассылку</h3>
@@ -620,7 +622,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <div class="modal__button">
