--- a/portfolio.html
+++ b/portfolio.html
@@ -338,81 +338,83 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-content">
-          <div class="contacts-block">
-            <a href="./index.html" class="logo-link link">
-              <div class="logo-link__text">
-                Web<span class="logo-link__studio">Studio</span>
-              </div>
-            </a>
-            <address class="address">
-              <ul class="address-list list">
-                <li class="address-list__item">
-                  <a
-                    class="address-list__link link"
-                    href="https://goo.gl/maps/1SCj835wtnktaxQW8"
-                    target="_blank"
-                    rel="noopener noreferrer "
-                  >
-                    г. Киев, пр-т Леси Украинки, 26</a
-                  >
+          <div class="footer-wrap">
+            <div class="contacts-block">
+              <a href="./index.html" class="logo-link link">
+                <div class="logo-link__text">
+                  Web<span class="logo-link__studio">Studio</span>
+                </div>
+              </a>
+              <address class="address">
+                <ul class="address-list list">
+                  <li class="address-list__item">
+                    <a
+                      class="address-list__link link"
+                      href="https://goo.gl/maps/1SCj835wtnktaxQW8"
+                      target="_blank"
+                      rel="noopener noreferrer "
+                    >
+                      г. Киев, пр-т Леси Украинки, 26</a
+                    >
+                  </li>
+                  <li class="address-list__item">
+                    <a
+                      class="address-list__contacts link"
+                      href="mailto:info@example.com"
+                      >info@example.com</a
+                    >
+                  </li>
+                  <li class="address-list__item">
+                    <a
+                      class="address-list__contacts link"
+                      href="tel:+380991111111"
+                      >+38 099 111 11 11</a
+                    >
+                  </li>
+                </ul>
+              </address>
+            </div>
+            <div class="soc-icons">
+              <h3 class="soc-icons__title">Присоединяйтесь</h3>
+              <ul class="icons-list list">
+                <li class="icons-list__item">
+                  <a href="" class="icons-list__link link">
+                    <svg class="icons-list__svg" width="20px" height="20px">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-instagram-2"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="address-list__item">
-                  <a
-                    class="address-list__contacts link"
-                    href="mailto:info@example.com"
-                    >info@example.com</a
-                  >
+                <li class="icons-list__item">
+                  <a href="" class="icons-list__link link">
+                    <svg class="icons-list__svg" width="20px" height="20px">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-twitter-1"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="address-list__item">
-                  <a
-                    class="address-list__contacts link"
-                    href="tel:+380991111111"
-                    >+38 099 111 11 11</a
-                  >
+                <li class="icons-list__item">
+                  <a href="" class="icons-list__link link">
+                    <svg class="icons-list__svg" width="20px" height="20px">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-facebook-1"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icons-list__item">
+                  <a href="" class="icons-list__link link">
+                    <svg class="icons-list__svg" width="20px" height="20px">
+                      <use
+                        href="./images/icons.svg/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
-            </address>
-          </div>
-          <div class="soc-icons">
-            <h3 class="soc-icons__title">Присоединяйтесь</h3>
-            <ul class="icons-list list">
-              <li class="icons-list__item">
-                <a href="" class="icons-list__link link">
-                  <svg class="icons-list__svg" width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg/symbol-defs.svg#icon-instagram-2"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-list__item">
-                <a href="" class="icons-list__link link">
-                  <svg class="icons-list__svg" width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg/symbol-defs.svg#icon-twitter-1"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-list__item">
-                <a href="" class="icons-list__link link">
-                  <svg class="icons-list__svg" width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg/symbol-defs.svg#icon-facebook-1"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icons-list__item">
-                <a href="" class="icons-list__link link">
-                  <svg class="icons-list__svg" width="20px" height="20px">
-                    <use
-                      href="./images/icons.svg/symbol-defs.svg#icon-linkedin-1"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            </div>
           </div>
           <div class="subscribe subscribe_margin">
             <h3 class="subscribe__title">Подпишитесь на рассылку</h3>
