--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
   <body>
     <header class="header">
       <div class="container">
-        <a href="./index.html" class="link header__logo-link">
-          <div class="header__logo">
-            Web<span class="header__logo-studio">Studio</span>
-          </div>
-        </a>
+        <div class="logo">
+          <a href="./index.html" class="link header__logo-link">
+            <span class="header__logo">
+              Web<span class="header__logo-studio">Studio</span>
+            </span>
+          </a>
+        </div>
         <nav class="nav">
           <ul class="nav-list list">
             <li class="nav-list__item">
@@ -228,7 +230,7 @@
                 width="370"
                 height="294"
               />
-              <p class="work-list__cover-text">Десктопные приложения</p>
+              <h3 class="work-list__cover-text">Десктопные приложения</h3>
             </li>
             <li class="work-list__item">
               <img
@@ -241,7 +243,7 @@
                 width="370"
                 height="294"
               />
-              <p class="work-list__cover-text">Мобильные приложения</p>
+              <h3 class="work-list__cover-text">Мобильные приложения</h3>
             </li>
             <li class="work-list__item">
               <img
@@ -254,7 +256,7 @@
                 width="370"
                 height="294"
               />
-              <p class="work-list__cover-text">Дизайнерские решения</p>
+              <h3 class="work-list__cover-text">Дизайнерские решения</h3>
             </li>
           </ul>
         </div>
@@ -617,11 +619,13 @@
         <div class="footer-content">
           <div class="footer-wrap">
             <div class="contacts-block">
-              <a href="./index.html" class="logo-link link">
-                <div class="logo-link__text">
-                  Web<span class="logo-link__studio">Studio</span>
-                </div>
-              </a>
+              <div class="footer-logo">
+                <a href="./index.html" class="logo-link link">
+                  <span class="logo-link__text">
+                    Web<span class="logo-link__studio">Studio</span>
+                  </span>
+                </a>
+              </div>
               <address class="address">
                 <ul class="address-list list">
                   <li class="address-list__item">
