--- a/portfolio.html
+++ b/portfolio.html
@@ -23,11 +23,13 @@
   <body>
     <header class="header header-border">
       <div class="container">
-        <a href="./index.html" class="link header__logo-link">
-          <div class="header__logo">
-            Web<span class="header__logo-studio">Studio</span>
-          </div>
-        </a>
+        <div class="logo">
+          <a href="./index.html" class="link header__logo-link">
+            <span class="header__logo">
+              Web<span class="header__logo-studio">Studio</span>
+            </span>
+          </a>
+        </div>
         <nav class="nav">
           <ul class="nav-list list">
             <li class="nav-list__item">
@@ -514,11 +516,13 @@
         <div class="footer-content">
           <div class="footer-wrap">
             <div class="contacts-block">
-              <a href="./index.html" class="logo-link link">
-                <div class="logo-link__text">
-                  Web<span class="logo-link__studio">Studio</span>
-                </div>
-              </a>
+              <div class="footer-logo">
+                <a href="./index.html" class="logo-link link">
+                  <span class="logo-link__text">
+                    Web<span class="logo-link__studio">Studio</span>
+                  </span>
+                </a>
+              </div>
               <address class="address">
                 <ul class="address-list list">
                   <li class="address-list__item">
